# 3lc-examples

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTANCE_REFACTORING_PLAN.md  LICENSE  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  README.md  add-bb-embeddings.ipynb  benchmark_performance.py  calculate-luminosity.ipynb  cifar10.ipynb  create_sam_dataset.ipynb  demo_optimizations.py  detectron2-balloons.ipynb  detectron2-coco128.ipynb  fine-tune-sam.ipynb  huggingface-cifar100.ipynb  huggingface-finetuning.ipynb  huggingface-imdb.ipynb  mnist.ipynb  normalize_images.py  pyproject.toml  pytest.ini  pytorch-cifar10.ipynb  pytorch-lightning-segformer.ipynb  pytorch-mnist.ipynb  readme.md  ruff.toml  tlc-install.ipynb  train-bb-classifier.ipynb  write-augmented-samples.ipynb  write-bb-table.ipynb  write-mammoth-table.ipynb  write-table.ipynb
.cursor/rules/: 007_aliases.mdc
.github/workflows/: lint.yml
data/balloons-mask-segmentation/: README.dataset.txt  README.roboflow.txt
data/car/: README.md
data/coco128/: annotations.json  keypoints_annotations.json
data/coco_random/: annotations.json
data/coco_simple/: annotations.json
data/csv/: data_0.csv  data_1.csv
data/yolo/: README.md  simple-list.yaml  simple-txt.yaml  simple.yaml
docs/: alias_tool_progress.md  showcase.ipynb
example-notebooks/: README.md  add-bb-embeddings.ipynb  calculate-luminosity.ipynb  detectron2-balloons-seg.ipynb  detectron2-balloons.ipynb  detectron2-coco128-seg.ipynb  detectron2-coco128.ipynb  huggingface-cifar100.ipynb  huggingface-finetuning.ipynb  huggingface-imdb.ipynb  pytorch-cifar10.ipynb  pytorch-fashion-mnist.ipynb  pytorch-lightning-segformer.ipynb  pytorch-mnist.ipynb  train-bb-classifier.ipynb
example-notebooks/bb-embeddings/: 1-fine-tune-on-crops.ipynb  2-collect-embeddings.ipynb
examples/: alias-tool.ipynb  bb-embedding-tool.ipynb  grounded-dino-example.ipynb  table_with_points_and_segmentations.ipynb
examples/audio-classification/: 01-hf-audio-explore.ipynb  02-create-3lc-table.ipynb  03-pytorch-train.ipynb  README.md
examples/audio-sample-type/: README.md  esc50-audio-embeddings.ipynb  pyproject.toml
examples/audio-sample-type/src/audio_sample_type/: __init__.py  create_demo_table.py  sample_type.py  schema.py
examples/cifar10-traversal/: traversal-coreset-findings.ipynb
examples/digifarm-virtual-table/: pyproject.toml
examples/digifarm-virtual-table/src/digifarm_virtual_table/: __init__.py  adapter.py  create_table.py
examples/externalized_bulk_data/: .gitignore  1-externalize-manually-with-processor.ipynb  2-externalize-manually-no-processor.ipynb  3-externalize-virtual-http-endpoints-single-attrs.ipynb  3-externalize-virtual-http-endpoints.ipynb  4-externalize-virtual-http-endpoints-chunked.ipynb  README.md  data_sources.py  http_server.py  http_server_chunked.py  http_server_single_attrs.py
examples/http-image-url-adapter/: README.md  pyproject.toml
examples/http-image-url-adapter/src/http_image_url_adapter/: __init__.py  adapter.py  create_demo_table.py
examples/kitti-virtual-table/: README.md  pyproject.toml
examples/kitti-virtual-table/src/kitti_virtual_table/: __init__.py  adapter.py  create_table.py
examples/nifti-virtual-table/: README.md  pyproject.toml
examples/nifti-virtual-table/src/nifti_virtual_table/: adapter.py  create_table.py
examples/sagemaker-training/: .gitignore  README.md  config.3lc.example.yaml  config.3lc.yaml  config.example.yaml  launch.py  pyproject.toml
examples/semantic-segmentation-sample-type/: README.md  SPEC.md  pyproject.toml
examples/semantic-segmentation-sample-type/scripts/: explore_diagnostics.py  ingest_cityscapes.py  ingest_oxford_pets.py  ingest_pascal_voc.py  train_unet.py
examples/semantic-segmentation-sample-type/src/semseg_sample_type/: __init__.py  class_map.py  sample_type.py
examples/supervision-sample-type/: README.md  pyproject.toml
examples/supervision-sample-type/src/supervision_sample_type/: __init__.py  compat_check.py  create_demo_table.py  sample_type.py
examples/tlc-ndjson-exporter/: README.md  pyproject.toml
examples/tlc-ndjson-exporter/src/tlc_ndjson_exporter/: __init__.py  exporter.py
experimental/: README.md
experimental/finetune_on_crops/: README.md  augment_bb_table.py  extend_table_with_metrics.py  finetune_on_crops.py
public-notebook-examples/: README.md  calculate-luminosity.ipynb  detectron2-balloons.ipynb
src/tlc_tools/: README.md  __init__.py  add_columns_to_table.py  bb_embeddings.py  checks.py  common.py  datasets.py  derived_tables.py  embeddings.py  metric_jumps.py  metrics.py  performance_monitor.py  sam_autosegment.py  split.py  travel_distance.py  weights.py  yolo_export.py
tests/: README.md
tests/alias_tool/: test_alias.py  test_alias_cli.py
tests/cli/: test_cli.py
tests/instance_metrics_tool/: test_extend_table_with_instance_metrics.py  test_finetune_on_crops.py  test_instance_config.py  test_instance_crop_dataset.py
tests/metric_jumps/: test_metric_jumps.py
tests/notebooks/: test_notebooks.py  test_notebooks_metadata.py
tests/travel_distance/: test_travel_distance.py
tools/: README.md  __init__.py  add_columns_to_table.py  assign_classifications_to_table.py  bb_funcs.py  bb_table_to_image_folder.py  common.py  compute_object_detection_sample_weights.py  cross_validation.py  embeddings.py  metrics.py  split.py  train_bb_classifier.py  yolo_export.py
transient_data/: .gitignore
tutorials/: QUALITY_PARAMETERS.md  README.md  add-embeddings.ipynb  add-image-metrics.ipynb  diversity.ipynb  flatten-mammoth.ipynb  huggingface-segmentation-example.ipynb  import-coco-segmentations.ipynb  import-semseg-dataset.ipynb  import-sintef-dataset.ipynb  notebook-with-test-data.ipynb  notebook_params.yaml  notebooks.yaml  sam-embeddings.ipynb  taco.ipynb  write-augmented-samples.ipynb  write-bb-table.ipynb  write-image-classification-table.ipynb  write-video-thumbnails.ipynb
tutorials/6-misc/: README.md  (+1 more)
utils/: README.md  __init__.py  __main__.py  cli.py  image_normalizer.py  notebooks_metadata.py
(+293 files in other folders)
