[project]
authors = [
    {name = "3LC", email = "support@3lc.ai"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.14,>=3.10"
dependencies = [
    "3lc<3.0.0,>=2.22.0",
    "fpsample<1.0.0,>=0.3.3",
    "jinja2>=3.1.5",
    "opencv-python<5.0.0.0,>=4.10.0.84",
    "scikit-learn<2.0.0,>=1.5.2",
    "tabulate>=0.9.0",
]
name = "3lc_tools"
version = "2.22"
description = "A set of open-source tools for extending and enhancing the base 3lc functionality."
readme = "README.md"
keywords = [
    "AI",
    "tools",
    "data workflows",
    "3lc",
]

[project.scripts]
3lc-tools = "tlc_tools.cli.main:main"

[project.optional-dependencies]
sam = [
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything",
]
huggingface = [
    "datasets>=2.17.0",
    "transformers<5.0.0,>=4.30.2",
    "evaluate<1.0.0,>=0.4.1",
    "accelerate>=1.8.1",
]
umap = [
    "umap-learn<1.0.0,>=0.5.4",
    "joblib<2.0.0,>=1.4.0",
]
pacmap = [
    "pacmap<1.0.0,>=0.7.1",
]
timm = [
    "timm<2.0.0,>=1.0.11",
]
kaggle = [
    "kaggle<2.0.0,>=1.6.17",
    "kagglehub>=0.3.13",
]
ultralytics = [
    "ultralytics @ git+https://github.com/3lc-ai/ultralytics",
]
lightning = [
    "pytorch-lightning<3.0.0,>=2.4.0",
]

pandaset = [
    "pandaset",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "papermill<3.0.0,>=2.6.0",
    "pre-commit>=4.0.1,<5.0.0",
    "ruff<1.0.0,>=0.9.0",
    "mypy<2.0.0,>=1.13.0",
    "types-tabulate>=0.9.0.20241207",
    "pytest-mock>=3.14.0",
    "ipykernel>=6.29.5",
    "pytest-coverage>=0.0",
    "ipywidgets>=8.1.5",
    "types-requests>=2.31.0.6",
]

[build]
includes = ["src/tlc_tools"]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlc_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.uv.sources]
pandaset = { git = "https://github.com/scaleapi/pandaset-devkit.git", subdirectory = "python", rev = "master" }
