[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-sample-type"
version = "0.1.0"
description = "Example: custom file-backed sample type for WAV audio in 3LC"
requires-python = ">=3.10"
dependencies = ["3lc", "soundfile", "numpy"]

[project.scripts]
create-audio-demo-table = "audio_sample_type.create_demo_table:main"

[project.entry-points."tlc.sample_types"]
wav_audio = "audio_sample_type.sample_type:WavAudioSampleType"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_sample_type"]
