[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semseg-sample-type"
version = "0.1.0"
description = "POC: semantic segmentation as an RLE-backed 3LC sample type"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["3lc", "numpy", "pycocotools"]

[project.optional-dependencies]
train = ["torch", "torchvision", "tqdm"]

# The "semantic_segmentation" sample type graduated into core tlc (tlc.sample_types),
# which self-registers it. No entry point here, to avoid a double-registration clash;
# this package re-exports the core implementation (see src/semseg_sample_type/__init__.py).

[tool.hatch.build.targets.wheel]
packages = ["src/semseg_sample_type"]
