[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semseg-oxford-pets-example"
version = "0.1.0"
description = "Example: ingest Oxford-IIIT Pets and train a UNet using the core 3LC semantic_segmentation sample type"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["3lc", "numpy", "pycocotools", "torch", "torchvision", "tqdm"]

# Scripts only. The semantic_segmentation sample type, its ergonomic class-map API,
# and the confusion-matrix metrics helper all live in core tlc now
# (tlc.sample_types / tlc.helpers.semantic_segmentation_metrics); there is no package
# to build here. This manifest only declares the dependencies needed to run
# scripts/ingest_oxford_pets.py and scripts/train_unet.py, so `pip install -e .`
# (or `uv pip install -e .`) provisions the environment without building a wheel.
[tool.hatch.build.targets.wheel]
bypass-selection = true
